--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,21 @@
 default: &default
   adapter: postgresql
+  host: localhost
+  username: jghehtcqzhidmt
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: my_database_development
+  database: dfdrc6iht1v500
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: my_database_test
+  database: dfdrc6iht1v500
 
 production:
   <<: *default
-  database: my_database_production
+  database: dfdrc6iht1v500
